# terra-os

./: .coverage  .env.example  .gitignore  AUDIT_REPORT.md  CONTINUATION.md  CONTINUATION_ZWIAD.md  CYBERSECURITY_REPORT_FINAL.md  DISCOVERY.md  GRUNT_6_ITERATIONS.md  PLAN_120_SPRINTOW.md  PLAN_140.md  RESEARCH.md  ROADMAP_M7_M8_M9.md  SECURITY.md  SECURITY_AUDIT_AUTH.md  SECURITY_AUDIT_INJECTION.md  SESJA-2026-07-24.md  SPEC.md  TUNNEL_URL.txt  budos-intelligence-offer.html  budos-karta-produktu.html  budos-oferta-premium.html  budos-v3.html  celerybeat-schedule  docker-compose.prod.yml  frontend_audit.json  package.json  pytest.ini  start_api.sh  terra-celery.service  vercel.json
services/api/: pyproject.toml
services/api/services/: ai
services/api/services/api/: cache.py  celery_app.py  main.py  middleware.py  performance.py  redis_cache.py  secret_scanner.py  security.py  security_audit.py  tasks.py
services/api/services/api/analytics/: __init__.py  ahp.py  bidding.py  cost_estimation.py  recommendation.py  risk_extractor.py  win_probability.py
services/api/services/api/auth/: __init__.py  deps.py  encryption.py  plan_gate.py  router.py  utils.py
services/api/services/api/integrations/: hubspot.py  slack.py  (+2 more)
services/ingestion/: __init__.py  alert_dispatcher.py  bip_connector.py  bk_connector.py  bzp_connector.py  bzp_document_scraper.py  bzp_results_connector.py  competitor_watcher.py  deduplicator.py  filters.py  fixtures.py  geo_enricher.py  normalize.py  pipeline.py  platform_document_scraper.py  pyproject.toml  repository.py  scorer.py  ted_connector.py
(+443 files in other folders)
