[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "terra-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=42.0",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "terra-shared",
    "terra-db",
    "pyotp>=2.9",
    "qrcode[pil]>=7.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["services*"]
