[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "terra-ingestion"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["services.ingestion*"]

[tool.setuptools.package-dir]
"" = "."
